# tapo-event-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_SPRINT2.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.6.1.md  hacs.json  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: hacs.yml  validate.yml
custom_components/tapo_event_bridge/: __init__.py  attributes.py  binary_sensor.py  button.py  capabilities.py  config_flow.py  const.py  data_path_probe.py  diagnostics.py  discovery.py  entity.py  event_engine.py  events.py  export.py  ha_event_bridge.py  manifest.json  models.py  number.py  person_lighting.py  registry.py  runtime.py  select.py  sensor.py  state_probe.py  strings.json  switch.py
docs/en/: capability_explorer.md  dashboard.md  development.md  diagnostics.md  event-journal.md  events.md  v1.md  (+4 more)
tests/: test_capabilities.py  test_capability_explorer.py  test_dashboard_snapshot.py  test_data_path_probe.py  test_diagnostic_models.py  test_discovery.py  test_event_activity.py  test_event_engine.py  test_event_journal.py  test_events.py  test_export.py  test_fleet_insights.py  test_fleet_overview.py  test_ha_event_bridge.py  test_person_lighting.py  test_real_discovery_runtime.py  test_recorder_safe_capability_explorer.py  test_registry.py  test_repository.py  test_runtime_events.py  test_runtime_metrics.py  test_runtime_platform_state.py  test_state_probe.py
(+14 files in other folders)
