[project]
name = "tapo-event-bridge"
version = "0.1.0"
description = "Home Assistant integration providing reliable Tapo camera events."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
